force-app/main/default/objects/CBK_PicklistValues__c/CBK_PicklistValues__c.object-meta.xml
<CustomObject>
    <label>CBK Picklist Value</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CBK Picklists Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>