force-app/main/default/objects/CBK_PicklistValues__c/fields/CBK_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>CBK_Dependencies__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dependencies</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>