force-app/main/default/objects/CBK_PicklistValues__c/fields/CBK_HasDependency__c.field-meta.xml
<CustomField>
    <fullName>CBK_HasDependency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Dependency</label>
    <type>Checkbox</type>
</CustomField>