force-app/main/default/objects/CBK_PicklistValues__c/fields/CBK_Object__c.field-meta.xml
<CustomField>
    <fullName>CBK_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>