force-app/main/default/objects/CBK_PicklistValues__c/fields/CBK_Picklist__c.field-meta.xml
<CustomField>
    <fullName>CBK_Picklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CBK Picklist</label>
    <referenceTo>CBK_PicklistValues__c</referenceTo>
    <relationshipLabel>CBK Picklists Values</relationshipLabel>
    <relationshipName>CBK_Picklists</relationshipName>
    <type>Lookup</type>
</CustomField>