force-app/main/default/objects/CBK_PicklistValues__c/fields/CBK_Project__c.field-meta.xml
<CustomField>
    <fullName>CBK_Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CBK_App</valueSetName>
    </valueSet>
</CustomField>