force-app/main/default/objects/CBK_PicklistValues__c/fields/CBK_RecordId__c.field-meta.xml
<CustomField>
    <fullName>CBK_RecordId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Id</label>
    <type>Text</type>
</CustomField>