force-app/main/default/objects/CBK_PicklistValues__c/recordTypes/CBK_Picklist.recordType-meta.xml
<RecordType>
    <fullName>CBK_Picklist</fullName>
    <active>true</active>
    <label>CBK Picklist</label>
</RecordType>