force-app/main/default/objects/CBK_PicklistValues__c/recordTypes/CBK_PicklistValue.recordType-meta.xml
<RecordType>
    <fullName>CBK_PicklistValue</fullName>
    <active>true</active>
    <label>CBK Picklist Value</label>
</RecordType>